--- a/ASE_analysis/GeneLists/readme
+++ b/ASE_analysis/GeneLists/readme
@@ -1,6 +1,6 @@
 # Each subfolder contained herein contains lists of genes showing ASE
 
-## 1) total_lists contains complete lists of ASE genes for each group. 
-## 2) uniq_lists contains lists of ASE genes unique to each group. 
-## 3) indicators contains lists of ASE genes that are "indicators" of each timepoint
+1) total_lists contains complete lists of ASE genes for each group. 
+2) uniq_lists contains lists of ASE genes unique to each group. 
+3) indicators contains lists of ASE genes that are "indicators" of each timepoint
 
